# GUX

./: .gitignore  .pypirc.example  CHANGELOG.md  LICENSE  NOTICE  README.md  RELEASING.md  clean-gux-locks.command  commit-and-release.command  commit-baseline.command  commit-ci-diagnostic.command  commit-ci-fix.command  commit-ci-xfail.command  commit-followup-and-push.command  commit-mac-bind-timeout.command  commit-pypi-tooling.command  do-release.command  force-push-baseline.command  install-gux.command  install.sh  launch-gux.command  prep-release.command  pyproject.toml  release.sh
.github/workflows/: test.yml
src/gux/: __init__.py  __main__.py  audit.py  cli.py  gates.py  governor.py  license.py  server.py  types.py
tests/: conftest.py  test_cli.py  test_gates.py  test_install_e2e.py  test_license.py  test_server.py
